Fix overlap and input

--- a/rootFolder (NEW)/newStyle.css
+++ b/rootFolder (NEW)/newStyle.css
@@ -189,7 +189,7 @@ footer{
 	margin-top: -.5vh;
 }
 .submit-area{
-	margin-left: 42vw;
+	margin-left: 30vw;
 	margin-top: 1.2vh;
 }
  .newsletter-text-input{
